clusters/hive/apps/vaultwarden/k8s-manifests/vaultwarden-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ingressClassName: traefik
  rules:
    - host: vault.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  number: 80
            path: /
            pathType: Prefix
